# iac-spec-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  iac-spec-driven.md  local-build-mac.sh  pyproject.toml  test-bundle-extraction.sh
.github/: CODEOWNERS
.github/workflows/scripts/: create-github-release.sh  create-release-packages.sh  generate-release-notes.sh
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
docs/: README.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md  writing-tech-agnostic-specs.md
examples/: README.md
examples/01-simple-vpc/: README.md
examples/01-simple-vpc/cloud-workflows/: aws.md  azure.md  gcp.md  ibm-cloud.md
examples/02-static-website/: README.md
examples/02-static-website/cloud-workflows/: aws.md  (+3 more)
examples/03-wordpress/: README.md
examples/04-landing-zone/: README.md
examples/05-three-tier-webapp/: README.md
examples/06-data-pipeline/: README.md
examples/07-microservices/: README.md
memory/: constitution.md  principles.md
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  update-agent-context.ps1
src/iac_specify_cli/: __init__.py
src/specify_cli/: __init__.py
templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md  vscode-settings.json
templates/commands/: iac.analyze.md  iac.checklist.md  iac.clarify.md  iac.constitution.md  iac.implement.md  iac.plan.md  iac.principles.md  iac.specify.md  iac.tasks.md
(+20 files in other folders)
