[project]
name = "iac-specify-cli"
version = "0.0.20"
description = "IAC Specify CLI, part of IAC Spec Kit. A tool to bootstrap your infrastructure projects for Spec-Driven Development (SDD)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
iac-specify = "iac_specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iac_specify_cli"]

